--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,13 @@ __pycache__/
 # Pycharm
 .idea/
 .pypirc
-*bat
+# *bat
 dist
 build
+test*
 *-info
 
 # Environment
 venv/
+
+#  如果git历史中有别的，比如我将lanzou包改名了，那么安装依然会有lanzou
